--- a/Python/pyproject.toml
+++ b/Python/pyproject.toml
@@ -2,13 +2,14 @@
 name = "speech-to-text-python"
 version = "0.1.0"
 description = "Python components for speech-to-text application"
-requires-python = ">=3.11"
+requires-python = ">=3.12"
 dependencies = [
-    "numpy>=2.3.1",
+    "numpy>=1.24,<2.3", # Changed from >=2.3.1
     "pyyaml>=6.0.2",
     "requests>=2.32.4",
-    "whisper>=1.1.10",
+    "openai-whisper>=20231117",
     "soundfile>=0.12.1",
+    "numba>=0.58.0",
 ]
 
 [build-system]
