feat: implement clipboard transcription with auto-restore
Add clipboard-based text output with 30s restoration timer
and comprehensive logging for transcription workflow.

--- a/SpeechToTextApp.entitlements
+++ b/SpeechToTextApp.entitlements
@@ -3,8 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>com.apple.security.app-sandbox</key>
-	<true/>
+	<false/>
 	<key>com.apple.security.device.audio-input</key>
 	<true/>
+	<key>com.apple.security.files.user-selected.read-write</key>
+	<true/>
+	<key>com.apple.security.files.downloads.read-write</key>
+	<true/>
+	<key>com.apple.security.temporary-exception.files.absolute-path.read-write</key>
+	<array>
+		<string>/Users/rakhshaanhussain/Personal Projects/Speech To Text App/</string>
+	</array>
 </dict>
 </plist>
+
