--- a/Python/pyproject.toml
+++ b/Python/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "openai-whisper>=20231117",
     "soundfile>=0.12.1",
     "numba>=0.58.0",
+    "aiohttp>=3.12.15",
+    "aiofiles>=24.1.0",
 ]
 
 [build-system]
