--- a/Config/settings.yaml
+++ b/Config/settings.yaml
@@ -4,6 +4,13 @@
 stt:
   provider: "whisper"
 
+# Server Settings
+server:
+  host: "localhost"
+  port: 8080
+  python_path: "Python/.venv/bin/python3"
+  script_path: "Python/transcription_server.py"
+
 # Audio Settings
 audio:
   sample_rate: 16000
@@ -22,15 +29,15 @@ whisper:
 llm:
   base_url: "http://localhost:11434"
   enabled: true
-  model: "llama3.1"
+  model: "g3-1b"
   temperature: 0.1
   max_tokens: 100
   prompt: null  # Use default prompt
 
 # Hotkey Settings
 hotkey:
-  key_code: 1  # S key
-  modifiers: ["command", "shift"]
+  key_code: 37  # L key
+  modifiers: ["option"]
 
 # Logging Settings
 logging:
