feat(settings): Enhance settings management with YAMS package for YAML configuration and real-time updates
- Introduced a comprehensive YAML-based configuration system for managing application settings.
- Added automatic reloading of components when relevant settings change, including Whisper model and server settings.
- Updated SettingsManager to handle loading, saving, and updating settings with notifications for changes.
- Enhanced UI in SettingsView to support new configuration options and real-time updates.
- Added functionality to reload the Whisper model without server restart via a new API endpoint.

--- a/Config/settings.yaml
+++ b/Config/settings.yaml
@@ -7,6 +7,7 @@ stt:
 # Server Settings
 server:
   host: "localhost"
+  port: 3001
   python_path: "Python/.venv/bin/python3"
   script_path: "Python/transcription_server.py"
 
