refactor: Remove FolderAccessManager and moving server code + settings to app bundle
- Deleted FolderAccessManager class to streamline folder access management.
- Updated SettingsManager to reflect new folder structure and paths.
- Enhanced error handling and logging for server operations.
- Adjusted application initialization to accommodate the new architecture.

--- a/stt-server-py/settings.yaml
+++ b/stt-server-py/settings.yaml
@@ -8,8 +8,8 @@ stt:
 server:
   host: "localhost"
   port: 3001
-  python_path: "Python/.venv/bin/python3"
-  script_path: "Python/transcription_server.py"
+  python_path: ".venv/bin/python3"
+  script_path: "transcription_server.py"
 
 # Audio Settings
 audio:
