MVP: macOS menu bar STT app with embedded Python server + settings, hotkeys, and docs refresh (#1)
* fresh start: purge all Xcode files and clean up project structure

* Say no to XCode (IDE)

* revert: switch back to Xcode development workflow

* feat: migrate to Xcode project structure, add entitlements, and update .gitignore for user-specific files

* chore: temp rename for case-sensitive file rename

* chore: rename speechToTextApp.swift to SpeechToTextApp.swift (case-sensitive)

* refactor(swift): unify logging style in AudioRecorder, HotkeyManager, and update Xcode project config

* added python bridge to proj

* feat: implement clipboard transcription with auto-restore

* initial http server setup

* refactor(architecture): replace subprocess PythonBridge with HTTP server architecture

* feat: enhance server configuration and folder access management

* chore: enhance HotkeyManager and PasteManager with settings integration and improved logging

* feat(history): implement transcription history management and UI

* feat(ui): introduce MenuBarView and NotificationManager for enhanced user interaction

* refactor(server): enhance ServerManager and TranscriptionServerClient with structured logging and settings integration

* chore(project): update project configuration and add new source files

* feat(app): enhance app functionality with new managers and UI updates

* chore(logging): enhance logging in HotkeyManager and NotificationManager with context prefixes

* refactor(server): update server port configuration and enhance port management

* The working POC

* minor ui changes

* feat(permissions): implement PermissionManager for handling microphone and accessibility permissions

* chore misc stuff

* wip(ui): Making it appear and behave like a menu-bar utility

* feat(ui): Updated UI to match expected menu-bar app functionality

* fix(notification): enhanced audio notification

* feat(notification): Overhauls notification to work ambiently (uses SF Symbol ani

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Python
 __pycache__/
 .python-version
+Python/~/
+Python/uv.lock/
 
 # Environments
 .env
@@ -10,8 +12,8 @@ __pycache__/
 Logs/
 
 # Xcode user data
-speech-to-text-app/speech-to-text-app.xcodeproj/xcuserdata/
-speech-to-text-app/speech-to-text-app.xcodeproj/project.xcworkspace/xcuserdata/
+SpeechToTextApp.xcodeproj/xcuserdata/
+SpeechToTextApp.xcodeproj/project.xcworkspace/xcuserdata/
 
 # macOS
 .DS_Store
